@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-05T01:51:31Z",
-  "count_outdated" : 2210,
-  "uniques_outdated" : 465,
-  "count" : 2248,
-  "uniques" : 488,
+  "timestamp" : "2022-07-05T08:23:03Z",
+  "count_outdated" : 2211,
+  "uniques_outdated" : 466,
+  "count" : 2249,
+  "uniques" : 489,
   "clones" : [
-    {
-      "timestamp": "2022-06-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-23T00:00:00Z",
       "count": 3,
@@ -93,6 +86,13 @@
       "timestamp": "2022-07-04T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
