@@ -3,11 +3,6 @@
   "uniques": 10,
   "clones": [
     {
-      "timestamp": "2022-06-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-06-23T00:00:00Z",
       "count": 3,
       "uniques": 2
@@ -65,6 +60,11 @@
     {
       "timestamp": "2022-07-04T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-05T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
